--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,11 @@
 rootProject.name = 'kimzing-springcloud'
 
-include 'kimzing-consumer'
-include 'kimzing-gateway'
-include 'kimzing-provider'
+include 'entry-admin'
+include 'entry-app'
+include 'entry-mini'
+include 'gateway'
 include 'server-admin'
+include 'service-api'
+include 'service-consumer'
+include 'service-provider'
+include 'tool-generator'
