--- a/gateway/src/main/resources/bootstrap.yaml
+++ b/gateway/src/main/resources/bootstrap.yaml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: server-admin
+    name: gateway
   profiles:
     active: dev
   cloud:
@@ -10,7 +10,6 @@ spring:
       password: ${nacos-password:123456}
       discovery:
         namespace: ${spring.profiles.active}
-        register-enabled: false
       config:
         namespace: ${spring.profiles.active}
         file-extension: yaml
@@ -18,6 +17,4 @@ spring:
         # 共享配置
         extension-configs:
           - data-id: actuator.yaml
-            refresh: true
-          - data-id: mail.yaml
             refresh: true
