--- a/service-provider/src/main/resources/bootstrap.yaml
+++ b/service-provider/src/main/resources/bootstrap.yaml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: server-admin
+    name: service-provider
   profiles:
     active: dev
   cloud:
@@ -10,7 +10,6 @@ spring:
       password: ${nacos-password:123456}
       discovery:
         namespace: ${spring.profiles.active}
-        register-enabled: false
       config:
         namespace: ${spring.profiles.active}
         file-extension: yaml
@@ -19,5 +18,12 @@ spring:
         extension-configs:
           - data-id: actuator.yaml
             refresh: true
-          - data-id: mail.yaml
+          - data-id: dubbo.yaml
             refresh: true
+
+# DataSource Config
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/springcloud?setUnicode=true&characterEncoding=utf8
+    username: root
+    password: 123456
