--- a/entry-app/src/main/resources/bootstrap.yaml
+++ b/entry-app/src/main/resources/bootstrap.yaml
@@ -1,3 +1,18 @@
+# knife开源的swagger ui配置
+knife4j:
+  # 是否是生产环境，如果是生产环境会默认关闭swagger
+  production: false
+  # 配置自定义markdown文件的位置
+  markdowns: classpath:markdown/*
+  # 配置认证功能
+  basic:
+    # 是否开启认证
+    enable: true
+    # 用户名
+    username: admin
+    # 密码
+    password: 123456
+
 spring:
   application:
     name: entry-app
