--- a/settings.gradle
+++ b/settings.gradle
@@ -3,8 +3,10 @@ rootProject.name = 'kimzing-springcloud'
 include 'entry-admin'
 include 'entry-app'
 include 'entry-mini'
+include 'entry-third'
 include 'gateway'
 include 'server-admin'
 include 'service-api'
-include 'service-provider'
+include 'service-order'
+include 'service-user'
 include 'tool-generator'
