--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ allprojects {
     repositories {
         maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
         maven { url 'http://mvn.kimzing.com/nexus/content/repositories/releases/' }
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
         mavenCentral()
     }
 
@@ -91,6 +92,13 @@ configure(serverProjects + gatewayProjects + entryProjects + businessProjects) {
 
 }
 
+// 开发项目公共配置
+configure(entryProjects) {
+    dependencies {
+        implementation 'com.github.xiaoymin:knife4j-spring-boot-starter:2.0.4'
+    }
+
+}
 
 // 开发项目公共配置
 configure(businessProjects + entryProjects) {
