--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -2,4 +2,5 @@ description '网关服务'
 
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
