--- a/service-api/build.gradle
+++ b/service-api/build.gradle
@@ -1,5 +1,6 @@
 description '公共API'
 
 dependencies {
-
+    // 用作日期格式化注解
+    compileOnly 'com.fasterxml.jackson.core:jackson-annotations:2.11.1'
 }
