--- a/tool-generator/src/main/resources/application.properties
+++ b/tool-generator/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #=============以下为必填============
 # 模块名
-moduleName=provider
+moduleName=user
 # 包名(功能名)
 packageName=user
 # 作者名
@@ -24,7 +24,7 @@ fileOverride=true
 # 是否生成结果列
 baseColumnList=true
 # PO公共父类属性
-superEntityColumns=id,creator,modifier,create_time,modify_time
+superEntityColumns=id,delete,creator,modifier,create_time,modify_time
 # service类型
 serviceImplType=dubbo
 # 实体命名
@@ -40,7 +40,7 @@ serviceImplName=%sServiceImpl
 # controller命名
 controllerName=%sController
 # 各模块是否生成
-controller=false
+controller=true
 service=true
 serviceImpl=true
 mapper=true
