--- a/tool-generator/src/main/resources/application.properties
+++ b/tool-generator/src/main/resources/application.properties
@@ -18,17 +18,19 @@ tables=user
 # 生成文件夹后是否打开文件夹
 needOpenDir=false
 # 是否生成结果集映射
-baseResultMap=true
+baseResultMap=false
 # 是否覆盖生成的文件
 fileOverride=true
 # 是否生成结果列
 baseColumnList=true
 # PO公共父类属性
-superEntityColumns=id,delete,creator,modifier,create_time,modify_time
+superEntityColumns=id,deleted,creator,modifier,create_time,modify_time
 # service类型
 serviceImplType=dubbo
 # 实体命名
 entityName=%sPO
+# 公共父包
+packageParent=com.kimzing
 # mapper接口命名
 mapperName=%sMapper
 # xml命名
