完成车辆信息改造

--- a/tool-generator/src/main/resources/application.properties
+++ b/tool-generator/src/main/resources/application.properties
@@ -2,7 +2,9 @@
 # 模块名
 moduleName=user
 # 包名(功能名)
-packageName=user
+packageName=car
+# 表名，多个英文逗号分割
+tables=car
 # 作者名
 author=KimZing
 # 数据库地址
@@ -11,8 +13,6 @@ url=localhost:3306/springcloud
 username=root
 # 数据库密码
 password=123456
-# 表名，多个英文逗号分割
-tables=user
 
 #=============以下为默认配置，请勿随意更改===========
 # 生成文件夹后是否打开文件夹
