--- a/tool-generator/src/main/resources/application.properties
+++ b/tool-generator/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 # 模块名
 moduleName=user
 # 包名(功能名)
-packageName=car
+packageName=user
 # 表名，多个英文逗号分割
-tables=car
+tables=user
 # 作者名
 author=KimZing
 # 数据库地址
