--- a/service-user/src/main/resources/bootstrap.yaml
+++ b/service-user/src/main/resources/bootstrap.yaml
@@ -28,7 +28,12 @@ spring:
     url: jdbc:mysql://localhost:3306/springcloud?setUnicode=true&characterEncoding=utf8&allowMultiQueries=true
     username: root
     password: 123456
+
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+kimzing:
+  mybatis-plus:
+    enabled: true
+    optimize-join: true
