--- a/service-user/src/main/resources/bootstrap.yaml
+++ b/service-user/src/main/resources/bootstrap.yaml
@@ -20,20 +20,5 @@ spring:
             refresh: true
           - data-id: dubbo.yaml
             refresh: true
-
-# DataSource Config
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    # 添加&allowMultiQueries=true使得一个接口可以执行多条语句
-    url: jdbc:mysql://localhost:3306/springcloud?setUnicode=true&characterEncoding=utf8&allowMultiQueries=true
-    username: root
-    password: 123456
-
-mybatis-plus:
-  configuration:
-    map-underscore-to-camel-case: true
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-kimzing:
-  mybatis-plus:
-    enabled: true
-    optimize-join: true
+          - data-id: mybatis-plus.yaml
+            refresh: false
