--- a/service-order/src/main/resources/bootstrap.yaml
+++ b/service-order/src/main/resources/bootstrap.yaml
@@ -20,10 +20,5 @@ spring:
             refresh: true
           - data-id: dubbo.yaml
             refresh: true
-
-# DataSource Config
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/springcloud?setUnicode=true&characterEncoding=utf8
-    username: root
-    password: 123456
+          - data-id: mybatis-plus.yaml
+            refresh: false
