验证工具生成模块

--- a/tool-generator/src/main/resources/application.properties
+++ b/tool-generator/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 #=============以下为必填============
 # 模块名
-moduleName=user
+moduleName=order
 # 包名(功能名)
-packageName=user
+packageName=order
 # 表名，多个英文逗号分割
-tables=user
+tables=order
 # 作者名
 author=KimZing
 # 数据库地址
