整理统一聚合层结构

--- a/entry-admin/src/main/resources/bootstrap.yaml
+++ b/entry-admin/src/main/resources/bootstrap.yaml
@@ -20,3 +20,5 @@ spring:
             refresh: true
           - data-id: dubbo.yaml
             refresh: true
+          - data-id: swagger.yaml
+            refresh: false
