--- a/gateway/src/main/resources/bootstrap.yaml
+++ b/gateway/src/main/resources/bootstrap.yaml
@@ -16,5 +16,5 @@ spring:
         max-retry: 3
         # 共享配置
         extension-configs:
-          - data-id: actuator.yaml
-            refresh: true
+          - data-id: common.yaml
+            refresh: false
