--- a/server-admin/src/main/resources/bootstrap.yaml
+++ b/server-admin/src/main/resources/bootstrap.yaml
@@ -17,7 +17,5 @@ spring:
         max-retry: 3
         # 共享配置
         extension-configs:
-          - data-id: actuator.yaml
-            refresh: true
-          - data-id: mail.yaml
-            refresh: true
+          - data-id: common.yaml
+            refresh: false
