--- a/entry-app/src/main/resources/bootstrap.yaml
+++ b/entry-app/src/main/resources/bootstrap.yaml
@@ -10,6 +10,9 @@ spring:
       password: ${nacos-password:123456}
       discovery:
         namespace: ${spring.profiles.active}
+        metadata:
+          management:
+            context-path: '${server.servlet.context-path}/actuator'
       config:
         namespace: ${spring.profiles.active}
         file-extension: yaml
