--- a/build.gradle
+++ b/build.gradle
@@ -94,13 +94,26 @@ configure(serverProjects + gatewayProjects + entryProjects + businessProjects) {
 
 // 聚合项目公共配置
 configure(entryProjects) {
+
     dependencies {
         implementation 'com.github.xiaoymin:knife4j-spring-boot-starter:2.0.4'
     }
 
 }
 
-// 开发项目公共配置
+// 开发项目配置
+configure(businessProjects) {
+
+    dependencies {
+        implementation 'com.baomidou:mybatis-plus-boot-starter:3.1.2'
+        implementation 'com.alibaba:druid-spring-boot-starter:1.1.23'
+        implementation 'org.flywaydb:flyway-core'
+        runtimeOnly 'mysql:mysql-connector-java'
+    }
+
+}
+
+// 开发项目及聚合项目公共配置
 configure(businessProjects + entryProjects) {
     configurations {
         // 排除tomcat，使用undertow容器
