--- a/build.gradle
+++ b/build.gradle
@@ -109,6 +109,7 @@ configure(businessProjects) {
         implementation 'com.alibaba:druid-spring-boot-starter:1.1.23'
         implementation 'org.flywaydb:flyway-core'
         runtimeOnly 'mysql:mysql-connector-java'
+        implementation 'org.apache.rocketmq:rocketmq-spring-boot-starter:2.1.0'
     }
 
 }
