--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,7 @@ include 'entry-third'
 include 'gateway'
 include 'server-admin'
 include 'service-api'
+include 'service-notice'
 include 'service-order'
 include 'service-user'
 include 'tool-generator'
