--- a/entry-third/src/main/resources/bootstrap.yaml
+++ b/entry-third/src/main/resources/bootstrap.yaml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: entry-third
+    version: @version@
+    description: @description@
   profiles:
     active: dev
   cloud:
