--- a/entry-admin/src/main/resources/bootstrap.yaml
+++ b/entry-admin/src/main/resources/bootstrap.yaml
@@ -2,6 +2,8 @@
 spring:
   application:
     name: entry-admin
+    version: @version@
+    description: @description@
   profiles:
     active: dev
   cloud:
