--- a/service-order/build.gradle
+++ b/service-order/build.gradle
@@ -3,3 +3,7 @@ description '生产者服务'
 dependencies {
 
 }
+
+processResources {
+    filter org.apache.tools.ant.filters.ReplaceTokens, tokens: [description: this.description, version: this.version]
+}
