--- a/service-order/src/main/resources/bootstrap.yaml
+++ b/service-order/src/main/resources/bootstrap.yaml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: service-order
+    version: @version@
+    description: @description@
   profiles:
     active: dev
   cloud:
