--- a/service-user/src/main/resources/bootstrap.yaml
+++ b/service-user/src/main/resources/bootstrap.yaml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: service-user
+    version: @version@
+    description: @description@
   profiles:
     active: dev
   cloud:
