编写文档并调整服务部分结构

--- a/tool-generator/src/main/resources/application.properties
+++ b/tool-generator/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 #=============以下为必填============
 # 模块名
-moduleName=order
+moduleName=user
 # 包名(功能名)
-packageName=order
+packageName=user
 # 表名，多个英文逗号分割
-tables=order
+tables=user
 # 作者名
 author=KimZing
 # 数据库地址
-url=localhost:3306/springcloud
+url=mysql.kimzing.com:3306/springcloud-user
 # 数据库用户名
 username=root
 # 数据库密码
