添加文件存储模板

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,5 +8,6 @@ include 'server-admin'
 include 'service-api'
 include 'service-notice'
 include 'service-order'
+include 'service-storage'
 include 'service-user'
 include 'tool-generator'
