完善存储模块

--- a/tool-generator/src/main/resources/application.properties
+++ b/tool-generator/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 #=============以下为必填============
 # 模块名
-moduleName=user
+moduleName=storage
 # 包名(功能名)
-packageName=user
-# 表名，多个英文逗号分割
-tables=user
+packageName=storage
+# 表名, 仅支持一次生成一张表
+tables=storage_file
 # 作者名
 author=KimZing
 # 数据库地址
-url=mysql.kimzing.com:3306/springcloud-user
+url=mysql.kimzing.com:3306/springcloud-storage
 # 数据库用户名
 username=root
 # 数据库密码
