--- a/service-api/build.gradle
+++ b/service-api/build.gradle
@@ -5,6 +5,9 @@ dependencies {
     compileOnly 'com.fasterxml.jackson.core:jackson-annotations:2.11.1'
     // Swagger注解
     compileOnly 'io.swagger:swagger-annotations:1.5.22'
+    // 校验注解
     compileOnly 'javax.validation:validation-api:2.0.1.Final'
     compileOnly 'org.hibernate:hibernate-validator:6.1.5.Final'
+    // FeignClient注解
+    compileOnly 'org.springframework.cloud:spring-cloud-openfeign-core:2.2.2.RELEASE'
 }
