完善生成器对下划线表名的支持

--- a/tool-generator/src/main/resources/application.properties
+++ b/tool-generator/src/main/resources/application.properties
@@ -4,7 +4,7 @@ moduleName=storage
 # 包名(功能名)
 packageName=storage
 # 表名, 仅支持一次生成一张表
-tables=storage_file
+table=storage_file
 # 作者名
 author=KimZing
 # 数据库地址
