--- a/service-storage/build.gradle
+++ b/service-storage/build.gradle
@@ -2,6 +2,7 @@ description '存储服务'
 
 dependencies {
     implementation 'io.minio:minio:7.1.0'
+    implementation 'com.github.xiaoymin:knife4j-spring-boot-starter:2.0.4'
 }
 
 processResources {
