--- a/entry-app/build.gradle
+++ b/entry-app/build.gradle
@@ -15,9 +15,9 @@ configurations {
     // 排除jackson xml，防止返回xml格式数据
     implementation.exclude module: 'jackson-dataformat-xml'
     // 使compileOnly包含annotationProcessor的集合
-    compileOnly {extendsFrom annotationProcessor}
+    compileOnly { extendsFrom annotationProcessor }
     // 使testCompileOnly包含testAnnotationProcessor的集合
-    testCompileOnly {extendsFrom testAnnotationProcessor}
+    testCompileOnly { extendsFrom testAnnotationProcessor }
 }
 
 ext {
@@ -52,9 +52,12 @@ dependencies {
     // sentinel限流降级
     implementation "com.alibaba.cloud:spring-cloud-starter-alibaba-sentinel"
     // sentinel对nacos数据源支持
-    implementation  "com.alibaba.csp:sentinel-datasource-nacos"
+    implementation "com.alibaba.csp:sentinel-datasource-nacos"
     // admin监控客户端
     implementation 'de.codecentric:spring-boot-admin-starter-client'
+    // 链路跟踪
+    implementation 'org.springframework.cloud:spring-cloud-starter-zipkin'
+    implementation 'io.zipkin.brave:brave-instrumentation-dubbo'
     // nacos 配置查找
     implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-config'
     // nacos 注册发现
