--- a/entry-admin/build.gradle
+++ b/entry-admin/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     implementation  "com.alibaba.csp:sentinel-datasource-nacos"
     // admin监控客户端
     implementation 'de.codecentric:spring-boot-admin-starter-client'
+    // 链路跟踪
+    implementation 'org.springframework.cloud:spring-cloud-starter-zipkin'
+    implementation 'io.zipkin.brave:brave-instrumentation-dubbo'
     // nacos 配置查找
     implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-config'
     // nacos 注册发现
