--- a/service-storage/build.gradle
+++ b/service-storage/build.gradle
@@ -34,8 +34,6 @@ dependencies {
     implementation 'org.apache.rocketmq:rocketmq-spring-boot-starter:2.1.0'
     // mybatisPlus数据库操作
     implementation 'com.baomidou:mybatis-plus-boot-starter:3.1.2'
-    // druid数据源集成
-    implementation 'com.alibaba:druid-spring-boot-starter:1.1.23'
     // sql脚本管理
     implementation 'org.flywaydb:flyway-core'
     // mysql连接驱动
@@ -57,6 +55,9 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok'
     // admin监控客户端
     implementation 'de.codecentric:spring-boot-admin-starter-client'
+    // 链路跟踪
+    implementation 'org.springframework.cloud:spring-cloud-starter-zipkin'
+    implementation 'io.zipkin.brave:brave-instrumentation-mysql8'
     // nacos 配置查找
     implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-config'
     // nacos 注册发现
