对基础设施服务进行单独分组

--- a/infra-notice/src/main/resources/bootstrap.yaml
+++ b/infra-notice/src/main/resources/bootstrap.yaml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: service-notice
+    name: infra-notice
     version: @version@
     description: @description@
   profiles:
