--- a/settings.gradle
+++ b/settings.gradle
@@ -4,10 +4,10 @@ include 'entry-admin'
 include 'entry-app'
 include 'entry-third'
 include 'gateway'
+include 'infra-notice'
+include 'infra-storage'
 include 'server-admin'
 include 'service-api'
-include 'service-notice'
 include 'service-order'
-include 'service-storage'
 include 'service-user'
 include 'tool-generator'
