添加搜索服务基本 模块

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,7 @@ include 'entry-app'
 include 'entry-third'
 include 'gateway'
 include 'infra-notice'
+include 'infra-search'
 include 'infra-storage'
 include 'server-admin'
 include 'service-api'
