添加商品服务

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,7 @@ include 'infra-storage'
 include 'server-admin'
 include 'service-api'
 include 'service-order'
+include 'service-product'
 include 'service-user'
 include 'tool-generator'
 include 'tool-template'
