整理入口项目接口

--- a/tool-generator/src/main/resources/application.properties
+++ b/tool-generator/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 #=============以下为必填============
 # 模块名
-moduleName=storage
+moduleName=product
 # 包名(功能名)
-packageName=storage
+packageName=product
 # 表名, 仅支持一次生成一张表
-table=storage_file
+table=product
 # 作者名
 author=KimZing
 # 数据库地址
-url=mysql.kimzing.com:3306/springcloud-storage
+url=mysql.kimzing.com:3306/springcloud-product
 # 数据库用户名
 username=root
 # 数据库密码
