--- a/entry-third/build.gradle
+++ b/entry-third/build.gradle
@@ -28,7 +28,7 @@ ext {
 
 dependencies {
     // dubbo调用
-    implementation 'com.alibaba.cloud:spring-cloud-starter-dubbo'
+    implementation 'org.apache.dubbo:dubbo-spring-boot-starter:2.7.7'
     // webmvc
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-undertow'
