修改为本地服务seata nacos zipkin

--- a/tool-generator/src/main/resources/application.properties
+++ b/tool-generator/src/main/resources/application.properties
@@ -8,7 +8,7 @@ table=product
 # 作者名
 author=KimZing
 # 数据库地址
-url=mysql.kimzing.com:3306/springcloud-product
+url=localhost:3306/springcloud-product
 # 数据库用户名
 username=root
 # 数据库密码
