--- a/tool-template/src/main/resources/nacos.yaml
+++ b/tool-template/src/main/resources/nacos.yaml
@@ -4,7 +4,7 @@ server:
 spring:
   # 对应 RedisProperties 类
   redis:
-    host: redis.kimzing.com
+    host: localhost
     port: 6379
     # Redis 服务器密码，默认为空。生产中，一定要设置 Redis 密码！
     #password:
@@ -15,7 +15,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     # 添加&allowMultiQueries=true使得一个接口可以执行多条语句
-    url: jdbc:mysql://mysql.kimzing.com:3306/springcloud-user?setUnicode=true&characterEncoding=utf8&allowMultiQueries=true&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=mysql-${spring.application.name}
+    url: jdbc:mysql://localhost:3306/springcloud-user?setUnicode=true&characterEncoding=utf8&allowMultiQueries=true&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=mysql-${spring.application.name}
     username: root
     password: 123456
 
