--- a/entry-admin/src/main/resources/bootstrap.yaml
+++ b/entry-admin/src/main/resources/bootstrap.yaml
@@ -8,15 +8,13 @@ spring:
   cloud:
     nacos:
       server-addr: ${nacos-server-addr:localhost:8848}
-      username: ${nacos-username:dev}
-      password: ${nacos-password:123456}
+      username: ${nacos-username:nacos}
+      password: ${nacos-password:nacos}
       discovery:
-        namespace: ${spring.profiles.active}
         metadata:
           management:
             context-path: '${server.servlet.context-path}/actuator'
       config:
-        namespace: ${spring.profiles.active}
         file-extension: yaml
         max-retry: 3
         # 共享配置
