--- a/server-admin/src/main/resources/bootstrap.yaml
+++ b/server-admin/src/main/resources/bootstrap.yaml
@@ -6,13 +6,11 @@ spring:
   cloud:
     nacos:
       server-addr: ${nacos-server-addr:localhost:8848}
-      username: ${nacos-username:dev}
-      password: ${nacos-password:123456}
+      username: ${nacos-username:nacos}
+      password: ${nacos-password:nacos}
       discovery:
-        namespace: ${spring.profiles.active}
         register-enabled: false
       config:
-        namespace: ${spring.profiles.active}
         file-extension: yaml
         max-retry: 3
         # 共享配置
