--- a/server-admin/src/main/resources/bootstrap.yaml
+++ b/server-admin/src/main/resources/bootstrap.yaml
@@ -9,8 +9,10 @@ spring:
       username: ${nacos-username:nacos}
       password: ${nacos-password:nacos}
       discovery:
+        namespace: ${spring.profiles.active}
         register-enabled: false
       config:
+        namespace: ${spring.profiles.active}
         file-extension: yaml
         max-retry: 3
         # 共享配置
