修改为rocketmq队列

--- a/service-order/build.gradle
+++ b/service-order/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     // openfeign接口调用
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     // 消息队列
-    implementation 'org.springframework.boot:spring-boot-starter-amqp'
+    implementation 'org.apache.rocketmq:rocketmq-spring-boot-starter:2.1.0'
     // xxl-job任务调度
     implementation 'com.xuxueli:xxl-job-core:2.2.0'
     // 分布式事物
