--- a/infra-notice/build.gradle
+++ b/infra-notice/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     // openfeign接口调用
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     // 消息队列
-    implementation 'org.springframework.boot:spring-boot-starter-amqp'
+    implementation 'org.apache.rocketmq:rocketmq-spring-boot-starter:2.1.0'
     // 公共api模块
     implementation project(':service-api')
     // 工具项目
