--- a/service-user/build.gradle
+++ b/service-user/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     // openfeign接口调用
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     // 消息队列
-    implementation 'org.springframework.boot:spring-boot-starter-amqp'
+    implementation 'org.apache.rocketmq:rocketmq-spring-boot-starter:2.1.0'
     // redis
     implementation 'org.redisson:redisson-spring-boot-starter:3.13.1'
     // 分布式事物
