--- a/tool-template/build.gradle
+++ b/tool-template/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
     // 消息队列
-    implementation 'org.springframework.boot:spring-boot-starter-amqp'
+    implementation 'org.apache.rocketmq:rocketmq-spring-boot-starter:2.1.0'
     // xxl-job任务调度
     implementation 'com.xuxueli:xxl-job-core:2.2.0'
 
