统一修改依赖版本

--- a/gateway/src/main/resources/bootstrap.yaml
+++ b/gateway/src/main/resources/bootstrap.yaml
@@ -6,8 +6,8 @@ spring:
   cloud:
     nacos:
       server-addr: ${nacos-server-addr:localhost:8848}
-      username: ${nacos-username:nacos}
-      password: ${nacos-password:nacos}
+      username: ${nacos-username:dev}
+      password: ${nacos-password:123456}
       discovery:
         namespace: ${spring.profiles.active}
       config:
