--- a/entry-admin/src/main/resources/bootstrap.yaml
+++ b/entry-admin/src/main/resources/bootstrap.yaml
@@ -8,8 +8,8 @@ spring:
   cloud:
     nacos:
       server-addr: ${nacos-server-addr:nacos.kimzing.com:8848}
-      username: ${nacos-username:nacos}
-      password: ${nacos-password:nacos}
+      username: ${nacos-username:dev}
+      password: ${nacos-password:123456}
       discovery:
         namespace: ${spring.profiles.active}
         metadata:
