--- a/entry-third/build.gradle
+++ b/entry-third/build.gradle
@@ -19,20 +19,20 @@ configurations {
 }
 
 ext {
-    springBootAdminVersion = '2.2.3'
-    springCloudAlibabaVersion = '2.2.1.RELEASE'
-    springCloudVersion = 'Hoxton.SR4'
+    springBootAdminVersion = '2.3.0'
+    springCloudAlibabaVersion = '2.2.2.RELEASE'
+    springCloudVersion = 'Hoxton.SR8'
 }
 
 dependencies {
     // dubbo调用
-    implementation 'org.apache.dubbo:dubbo-spring-boot-starter:2.7.8'
+    implementation 'com.alibaba.cloud:spring-cloud-starter-dubbo'
     // webmvc
     implementation 'org.springframework.boot:spring-boot-starter-web'
     // openfeign接口调用
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     // 分布式事物
-    implementation 'io.seata:seata-spring-boot-starter:1.3.0'
+    implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-seata'
     // 公共api模块
     implementation project(':service-api')
     // 工具项目
@@ -88,7 +88,7 @@ test {
 
 repositories {
     maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
-    maven { url 'http://mvn.kimzing.com/repository/maven-releases/' }
+    maven { url 'http://mvn.kimzing.com/repository/maven-public/' }
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
     mavenCentral()
 }
