--- a/service-user/build.gradle
+++ b/service-user/build.gradle
@@ -17,24 +17,24 @@ configurations {
 }
 
 ext {
-    springBootAdminVersion = '2.2.3'
-    springCloudAlibabaVersion = '2.2.1.RELEASE'
-    springCloudVersion = 'Hoxton.SR4'
+    springBootAdminVersion = '2.3.0'
+    springCloudAlibabaVersion = '2.2.2.RELEASE'
+    springCloudVersion = 'Hoxton.SR8'
 }
 
 dependencies {
     // dubbo调用
-    implementation 'org.apache.dubbo:dubbo-spring-boot-starter:2.7.8'
+    implementation 'com.alibaba.cloud:spring-cloud-starter-dubbo'
     // webmvc
     implementation 'org.springframework.boot:spring-boot-starter-web'
     // openfeign接口调用
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     // 消息队列
-    implementation 'org.apache.rocketmq:rocketmq-spring-boot-starter:2.1.0'
+    implementation 'com.alibaba.cloud:spring-cloud-starter-stream-rocketmq'
     // redis
     implementation 'org.redisson:redisson-spring-boot-starter:3.13.1'
     // 分布式事物
-    implementation 'io.seata:seata-spring-boot-starter:1.3.0'
+    implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-seata'
     // mybatisPlus数据库操作
     implementation 'com.baomidou:mybatis-plus-boot-starter:3.1.2'
     // sql脚本管理
@@ -91,7 +91,7 @@ test {
 
 repositories {
     maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
-    maven { url 'http://mvn.kimzing.com/repository/maven-releases/' }
+    maven { url 'http://mvn.kimzing.com/repository/maven-public/' }
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
     mavenCentral()
 }
