--- a/entry-admin/build.gradle
+++ b/entry-admin/build.gradle
@@ -36,9 +36,9 @@ dependencies {
     // 公共api模块
     implementation project(':service-api')
     // 工具项目
-    implementation 'com.kimzing:kimzing-utils:1.0.0'
+    implementation 'com.kimzing:kimzing-utils:1.0.0-SNAPSHOT'
     // 自定义starter, 提供各种功能
-    implementation 'com.kimzing:kimzing-springboot-starter:1.0.0'
+    implementation 'com.kimzing:kimzing-springboot-starter:1.0.0-SNAPSHOT'
     // knife4j swagger
     implementation 'com.github.xiaoymin:knife4j-spring-boot-starter:2.0.4'
     // JSR303校验
