--- a/service-api/build.gradle
+++ b/service-api/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     // FeignClient注解
     compileOnly 'org.springframework.cloud:spring-cloud-openfeign-core:2.2.2.RELEASE'
     // 工具项目
-    implementation 'com.kimzing:kimzing-utils:1.0.0'
+    implementation 'com.kimzing:kimzing-utils:1.0.0-SNAPSHOT'
     // lombok
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
